--- a/1stsem/quizeA.html
+++ b/1stsem/quizeA.html
@@ -395,11 +395,17 @@ footer button.show{
     color: #fff;
     background: #007bff;
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
     .info_box {
         width: 350px;
         margin-left: 2.5rem;
         margin-top: 3rem;
+    }
+    .quiz_box {
+    width: 340px;
+    margin-left: 1rem;
+    margin-top: 1.5rem;
+    
     }
 }
 	</style>
