--- a/1stsem/quizeA.html
+++ b/1stsem/quizeA.html
@@ -395,7 +395,7 @@ footer button.show{
     color: #fff;
     background: #007bff;
 }
-/* @media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) {
     .info_box {
         width: 320px;
         margin-left: 1.5rem;
@@ -407,7 +407,7 @@ footer button.show{
     margin-top: 1.7rem;
     
     }
-} */
+}
 	</style>
 </head>
 <body>
