--- a/1stsem/quizeA.html
+++ b/1stsem/quizeA.html
@@ -395,16 +395,16 @@ footer button.show{
     color: #fff;
     background: #007bff;
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 480px) {
     .info_box {
-        width: 370px;
-        margin-left: .5rem;
-        margin-top: 2rem;
+        width: 320px;
+        margin-left: 1.5rem;
+        margin-top: 2.7rem;
     }
     .quiz_box {
-    width: 370px;
-    margin-left: .5rem;
-    margin-top: 1rem;
+    width: 340px;
+    margin-left: 1.3rem;
+    margin-top: 1.7rem;
     
     }
 }
