--- a/1stsem/quizeA.html
+++ b/1stsem/quizeA.html
@@ -397,14 +397,14 @@ footer button.show{
 }
 @media screen and (max-width: 480px) {
     .info_box {
-        width: 320px;
-        margin-left: 1.5rem;
-        margin-top: 2.7rem;
+        width: 380px;
+        margin-left: .5rem;
+        margin-top: 2rem;
     }
     .quiz_box {
-    width: 340px;
-    margin-left: 1.3rem;
-    margin-top: 1.7rem;
+    width: 370px;
+    margin-left: .5rem;
+    margin-top: 1rem;
     
     }
 }
